--- a/r2/r2/templates/thingupdater.html
+++ b/r2/r2/templates/thingupdater.html
@@ -35,4 +35,7 @@
         });
   $.map(friends, show_friend);
 
+  var saves = ${unsafe(simplejson.dumps(list(thing.saves)))};
+  $.map(saves, show_saved);
+
 </script>
