--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -41,6 +41,7 @@
   <input type="hidden" name="op"  value="" />
 
   <h2>${_("stylesheet")}</h2>
+  <input type="hidden" name="prevstyle" value="${thing.site.prev_stylesheet}"/>
   <div class="sheets">
     <div style="width: 100%" class="col">
       <div>
@@ -52,6 +53,11 @@
            >
           ${keep_space(thing.stylesheet_contents) or ''}
         </textarea>
+        <div id="conflict_box" style="display: none">
+            <div id="conflict_diff"></div>
+            <h2 class="error">${_('Your edit will not be saved!')}</h2>
+            <textarea rows="20" cols="20" name="conflict_old"></textarea>
+        </div>
       </div>
     </div>
     <div style="display:none" class="col">
