Pluralise moderators in the admin clippy message.

--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -106,7 +106,7 @@ function admincheck(elem) {
          please write to
          &#32;
          <a href="http://reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
-          the moderator of the reddit
+          the moderators of the reddit
          </a>
          &#32;
          instead.
