Save our kindhearted admin clippy readers a redirect.

--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -105,7 +105,7 @@ function admincheck(elem) {
        <li>If you think your posts are being caught in the spam filter,
          please write to
          &#32;
-         <a href="http://reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
+         <a href="http://www.reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
           the moderators of the reddit
          </a>
          &#32;
@@ -119,7 +119,7 @@ function admincheck(elem) {
          inquiring about, and that's actually the reason you're writing, please
          message 
          &#32;
-         <a href="http://reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
+         <a href="http://www.reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
           all of the moderators of the reddit
          </a>
          &#32; (using the "message the mods" feature located at the top of the
