--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -106,7 +106,7 @@ function admincheck(elem) {
          please write to
          &#32;
          <a href="http://www.reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
-          the moderators of the reddit
+          the moderators of the subreddit
          </a>
          &#32;
          instead.
@@ -120,7 +120,7 @@ function admincheck(elem) {
          message 
          &#32;
          <a href="http://www.reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
-          all of the moderators of the reddit
+          all of the moderators of the subreddit
          </a>
          &#32; (using the "message the mods" feature located at the top of the
          mod box) with a direct link to the comment page of the submission or other
