--- a/r2/r2/templates/login.html
+++ b/r2/r2/templates/login.html
@@ -62,11 +62,14 @@
     %endif
     <div>
       <ul>
-        <li>
+        <li class="name-entry">
           <label for="user_${op}">${_('username')}:</label>
           <input value="${user}" name="user" id="user_${op}" 
                  type="text" maxlength="20" tabindex="${tabindex}" autofocus />
           %if register:
+            <span class="throbber"></span>
+            <span class="notice-taken">${_('try another')}</span>
+            <span class="notice-available">${_('available!')}</span>
             ${error_field("BAD_USERNAME", "user", kind="span")}
             ${error_field("USERNAME_TAKEN", "user", kind="span")}
             ${error_field("USERNAME_TAKEN_DEL", "user", kind="span")}
