registration: Disable submit button when username invalid.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -2684,6 +2684,10 @@ body.rulespage-body {
     color: #369;
 }
 
+button.button[disabled] {
+    color: gray;
+}
+
 .button #cover {
     position: relative; 
  }
