Refactor oauth2 scopes and add subreddits to them.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -6146,6 +6146,8 @@ tr.gold-accent + tr > td {
 }
 
 .app-permissions li { position: relative; }
+.app-permissions-subreddits { display:block; margin-top: 1em; }
+
 .app-scope {
     display: none;
     position: absolute;
