--- a/r2/r2/templates/oauth2authorization.html
+++ b/r2/r2/templates/oauth2authorization.html
@@ -23,6 +23,7 @@
 <%!
    from r2.lib.template_helpers import static, s3_https_if_secure
 %>
+<%namespace file="prefapps.html" import="scope_details" />
 <%namespace file="utils.html" import="_md" />
 <%
    if thing.client.icon_url:
@@ -45,16 +46,12 @@
   %endif
   <div class="access">
     <h2>${_("Allow %(app_name)s to:") % dict(app_name=thing.client.name)}</h2>
-    <ul>
-      %for scope_info in thing.scope_details:
-        <li>${scope_info["description"]}</li>
-      %endfor
-    </ul>
+    ${scope_details(thing.scope)}
     <p class="notice">${_("%(app_name)s will not be able to access your reddit password.") % dict(app_name=thing.client.name)}</p>
     <form method="post" action="/api/v1/authorize" class="pretty-form">
       <input type="hidden" name="client_id" value="${thing.client._id}" />
       <input type="hidden" name="redirect_uri" value="${thing.redirect_uri}" />
-      <input type="hidden" name="scope" value="${','.join(scope['id'] for scope in thing.scope_details)}" />
+      <input type="hidden" name="scope" value="${str(thing.scope)}" />
       <input type="hidden" name="state" value="${thing.state}" />
       <input type="hidden" name="uh" value="${c.modhash}"/>
       <div>
