--- a/r2/r2/templates/prefapps.html
+++ b/r2/r2/templates/prefapps.html
@@ -165,7 +165,35 @@
   </li>
 </%def>
 
-<%def name="authorized_app(app, scopes)">
+<%def name="scope_details(scope, compact=False)">
+  <div class="app-permissions">
+    <ul>
+      %for name, scope_info in scope.details():
+        <li>
+          %if compact:
+            ${scope_info['name']}
+            <span class="app-scope">${scope_info['description']}</span>
+          %else:
+            ${scope_info['description']}
+          %endif
+        </li>
+      %endfor
+    </ul>
+    %if scope.subreddit_only:
+      <span class="app-permissions-subreddits">
+        ${_("Only on:")}&#32;
+        %for i, name in enumerate(sorted(scope.subreddits)):
+          %if i:
+            ,&#32;
+          %endif
+          <a href="/r/${name}">/r/${name}</a>
+        %endfor
+      </span>
+    %endif
+  </div>
+</%def>
+
+<%def name="authorized_app(app, scope)">
   <div id="authorized-app-${app._id}" class="authorized-app rounded">
     ${icon(app)}
     <div class="app-details">
@@ -176,14 +204,7 @@
         ${app.name}
       %endif
       </h2>
-      <ul class="app-permissions">
-        %for scope_info in scopes:
-          <li>
-            ${scope_info['name']}
-            <span class="app-scope">${scope_info['description']}</span>
-          </li>
-        %endfor
-      </ul>
+      ${scope_details(scope, compact=True)}
     </div>
     <div class="app-description">${app.description}</div>
     ${developers(app)}
@@ -199,8 +220,8 @@
 %if thing.my_apps:
   <h1>${_("authorized applications")}</h1>
 
-  %for app, scopes in thing.my_apps:
-    ${authorized_app(app, scopes)}
+  %for app, scope in thing.my_apps:
+    ${authorized_app(app, scope)}
   %endfor
 %endif
 
