wiki: Rework page creation.

--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -40,9 +40,11 @@
 
 <form method="post" id="editform" data-page="${c.page}" onsubmit="r.wiki.submitEdit(event)">
     <textarea name="content" rows="20" cols="20" style="width: 100%" id="content">${keep_space(thing.page_content)}</textarea>
-    <br/><br/>
-    <label for="reason">${_("reason for revision")}</label><br/>
-    <input type="text" name="reason" style="width: 100%" />
+    %if thing.show_reason_field:
+        <br/><br/>
+        <label for="reason">${_("reason for revision")}</label><br/>
+        <input type="text" name="reason" style="width: 100%" />
+    %endif
     <input type="hidden" id="previous" name="previous" value="${thing.previous}" /><br/><br/>
     <input type="submit" value="${_('save page')}" />
     <input type="button" value="${_('cancel edit')}"  onclick="location.href='${thing.base_url}/${c.page}'" />
