--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -38,14 +38,15 @@
     <span id="specials" class="error"></span>
 </div>
 
-<form method="post" id="editform" data-page="${c.page}" onsubmit="r.wiki.submitEdit(event)">
+<form method="post" id="editform" onsubmit="r.wiki.submitEdit(event)">
     <textarea name="content" rows="20" cols="20" style="width: 100%" id="content">${keep_space(thing.page_content)}</textarea>
     %if thing.show_reason_field:
         <br/><br/>
         <label for="reason">${_("reason for revision")}</label><br/>
         <input type="text" name="reason" id="wiki_revision_reason" />
     %endif
-    <input type="hidden" id="previous" name="previous" value="${thing.previous}" /><br/><br/>
-    <input type="submit" value="${_('save page')}" />
+    <input type="hidden" id="page" name="page" value="${thing.page}" />
+    <input type="hidden" id="previous" name="previous" value="${thing.previous}" />
+    <br/><br/><input type="submit" value="${_('save page')}" />
     <input type="button" value="${_('cancel edit')}"  onclick="location.href='${thing.base_url}/${c.page}'" />
 </form>
