--- a/r2/r2/templates/wikirevision.xml
+++ b/r2/r2/templates/wikirevision.xml
@@ -20,8 +20,13 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
+<%!
+   from r2.lib.template_helpers import get_domain
+%>
+
 <item>
     <title>${thing._id}</title>
+    <link>http://${get_domain(subreddit=False)}/${c.wiki_base_url}/${thing.page}?v=${thing._id}</link>
     <author>${thing._get('author', 'Unknown')}</author>
     <category>${thing.sr}/${thing.page}</category>
     <description>${thing._get('reason')}</description>
