--- a/r2/r2/templates/wikipagerevisions.xml
+++ b/r2/r2/templates/wikipagerevisions.xml
@@ -20,4 +20,4 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
-${thing.revisions}
+${thing.listing}
