Subreddit CSS: Store subreddit CSS on S3 and minify it.
This means that stylesheets can have all the advantages of other static
files, such as not having session cookies in the request. In addition,
it also means that subreddit objects are drastically smaller in memcache
which saves internal bandwidth and increases cache capacity.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -82,21 +82,11 @@
       %endif
   %endif
 
-  %if c.can_apply_styles and c.allow_styles and c.site.stylesheet_contents:
-     <% inline_stylesheet = (
-          len(c.site.stylesheet_contents) < 1024
-          and '<' not in c.site.stylesheet_contents) %>
-     %if inline_stylesheet:
-       ## for very simple stylesheets, we can just include them inline
-       <style type="text/css" title="applied_subreddit_stylesheet">
-           ${unsafe(c.site.stylesheet_contents)}
-       </style>
-     %else:
-       <link rel="stylesheet"
-             href="http://${get_domain(cname=False, subreddit=True)}/stylesheet.css?v=${c.site.stylesheet_hash}"
-             title="applied_subreddit_stylesheet"
-             type="text/css" />
-     %endif
+  %if c.can_apply_styles and c.allow_styles and c.site.stylesheet_hash:
+    <link rel="stylesheet"
+          href="${c.site.stylesheet_url}"
+          title="applied_subreddit_stylesheet"
+          type="text/css">
   %endif
   %if getattr(thing, "additional_css", None):
     <link rel="stylesheet" href="${static(thing.additional_css)}" 
