--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -43,6 +43,7 @@
   <h2>${_("stylesheet")}</h2>
   <input type="hidden" name="prevstyle" value="${thing.site.prev_stylesheet}"/>
   ${error_field("TOO_LONG", "prevstyle")}
+  ${error_field("BAD_REVISION", "prevstyle")}
   <div class="sheets">
     <div style="width: 100%" class="col">
       <div>
